--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,7 +4,8 @@
     "outDir": "./dist",
     "declaration": true,
     "sourceMap": false,
-    "target": "es2018"
+    "target": "es2018",
+    "module": "commonjs",
   },
   "exclude": [
     "./dist",
